--- a/index.html
+++ b/index.html
@@ -1,1 +1,44 @@
-Projeto Casa Plastica
+<!DOCTYPE html>
+<html lang="pt-br">
+
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Casa Plástica</title>
+    <style>
+        body {
+            font-family: Arial, sans-serif;
+            background-color: #f0f0f0;
+            margin: 0;
+            padding: 0;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            height: 100vh;
+            text-align: center;
+        }
+
+        .container {
+            max-width: 600px;
+            padding: 20px;
+            background-color: #fff;
+            border-radius: 10px;
+            box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+        }
+
+        .logo {
+            max-width: 200px;
+            margin-bottom: 20px;
+        }
+    </style>
+</head>
+
+<body>
+    <div class="container">
+        <img src="logo.png" alt="Logo Casa Plástica" class="logo">
+        <h1>Casa Plástica</h1>
+        <p>Casa Plástica é uma iniciativa dedicada à reciclagem de plásticos oceânicos, promovendo a sustentabilidade e engajando comunidades na preservação do meio ambiente.</p>
+    </div>
+</body>
+
+</html>
