--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 
 <body>
     <div class="container">
-        <img src="logo.png" alt="Logo Casa Plástica" class="logo">
+        <img src="Asset 21.png" alt="Logo Casa Plástica" class="logo">
         <h1>Casa Plástica</h1>
         <p>Casa Plástica é uma iniciativa dedicada à reciclagem de plásticos oceânicos, promovendo a sustentabilidade e engajando comunidades na preservação do meio ambiente.</p>
     </div>
