--- a/index.html
+++ b/index.html
@@ -4,11 +4,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Casa Plástica</title>
+    <title>Casa Plastica</title>
     <style>
         body {
             font-family: Arial, sans-serif;
-            background-color: #f0f0f0;
+            background-color: #ffffaa;
             margin: 0;
             padding: 0;
             display: flex;
@@ -27,8 +27,7 @@
         }
 
         .logo {
-            max-width: 200px;
-            margin-bottom: 20px;
+            max-width: 100%;
         }
     </style>
 </head>
@@ -36,8 +35,6 @@
 <body>
     <div class="container">
         <img src="Asset 21.png" alt="Logo Casa Plástica" class="logo">
-        <h1>Casa Plástica</h1>
-        <p>Casa Plástica é uma iniciativa dedicada à reciclagem de plásticos oceânicos, promovendo a sustentabilidade e engajando comunidades na preservação do meio ambiente.</p>
     </div>
 </body>
 
