--- a/index.html
+++ b/index.html
@@ -22,6 +22,17 @@
 
         .logo {
             max-width: 100%;
+            opacity: 0;
+            animation: fadeIn 2s ease forwards;
+        }
+
+        @keyframes fadeIn {
+            from {
+                opacity: 0;
+            }
+            to {
+                opacity: 1;
+            }
         }
     </style>
 </head>
