--- a/index.html
+++ b/index.html
@@ -23,7 +23,13 @@
         .logo {
             max-width: 100%;
             opacity: 0;
-            animation: fadeIn 5s ease forwards;
+            animation: fadeIn 4s ease forwards;
+        }
+        .message {
+            max-width: 100%;
+            opacity: 0;
+            animation: fadeIn 7s ease forwards;
+            
         }
 
         @keyframes fadeIn {
@@ -40,6 +46,7 @@
 <body>
     <div class="container">
         <img src="Asset 93.png" alt="Logo Casa Plástica" class="logo">
+        <div class="message">Em breve voltaremos com tudo novo!</div>
     </div>
 </body>
 
