--- a/index.html
+++ b/index.html
@@ -28,8 +28,11 @@
         .message {
             max-width: 100%;
             opacity: 0;
-            animation: fadeIn 7s ease forwards;
-            
+            animation: fadeIn 8s ease forwards;
+            text-align: center;
+            font-family: Verdana, sans-serif;
+            padding: 7% 26%;
+            font-size: 18px;
         }
 
         @keyframes fadeIn {
