--- a/index.html
+++ b/index.html
@@ -5,52 +5,29 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Casa Plastica</title>
-    <style>
-        body {
-            margin: 0;
-            padding: 0;
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            height: 100vh;
-        }
-
-        .container {
-            max-width: 600px;
-            padding: 20px;
-        }
-
-        .logo {
-            max-width: 100%;
-            opacity: 0;
-            animation: fadeIn 4s ease forwards;
-        }
-        .message {
-            max-width: 100%;
-            opacity: 0;
-            animation: fadeIn 8s ease forwards;
-            text-align: center;
-            font-family: Verdana, sans-serif;
-            padding: 7% 26%;
-            font-size: 18px;
-        }
-
-        @keyframes fadeIn {
-            from {
-                opacity: 0;
-            }
-            to {
-                opacity: 1;
-            }
-        }
-    </style>
+    <link rel="stylesheet" href="styles.css">
 </head>
 
 <body>
-    <div class="container">
-        <img src="Asset 93.png" alt="Logo Casa Plástica" class="logo">
-        <div class="message">Em breve voltaremos com tudo novo!</div>
-    </div>
+    <header>
+        <h1>Casa Plastica</h1>
+    </header>
+
+    <nav>
+        <ul>
+            <li><a href="sobre.html">Sobre</a></li>
+            <li><a href="servicos.html">Serviços</a></li>
+            <li><a href="contato.html">Contato</a></li>
+        </ul>
+    </nav>
+
+    <main>
+        <!-- Content will be loaded here -->
+    </main>
+
+    <footer>
+        <p>&copy; 2024 Projeto Casa Plastica. </br> Todos os direitos reservados.</p>
+    </footer>
 </body>
 
 </html>
