Update and rename about.html to sobre.html

--- a/sobre.html
+++ b/sobre.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Sobre - Casa Plástica</title>
+    <title>Sobre - Casa Plastica</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 
