--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
 <body>
     <header>
-        <h1>Casa Plastica</h1>
+        <a href="/"><h1>Casa Plastica</h1></a>
     </header>
 
     <nav>
@@ -22,7 +22,7 @@
     </nav>
 
     <main>
-        <!-- Content will be loaded here -->
+        <img src="/Asset 93.png" />
     </main>
 
     <footer>
