--- a/contato.html
+++ b/contato.html
@@ -10,7 +10,7 @@
 
 <body>
     <header>
-        <h1>Casa Plastica</h1>
+        <a href="/"><h1>Casa Plastica</h1></a>
     </header>
 
     <nav>
