--- a/contato.html
+++ b/contato.html
@@ -24,7 +24,8 @@
     <main>
         <section>
             <h2>Entre em Contato</h2>
-            <form action="mailto:casaplastica@gmail.com" method="post" enctype="text/plain">
+            <!--
+            <form action="mailto:pedrolucasp@gmail.com" method="post" enctype="text/plain">
                 <label for="name">Nome:</label>
                 <input type="text" id="name" name="name" required>
                 <label for="email">Email:</label>
@@ -33,8 +34,10 @@
                 <textarea id="message" name="message" rows="4" required></textarea>
                 <button type="submit">Enviar</button>
             </form>
+            -->
             <p>Entre em contato pelo WhatsApp: <a href="https://wa.me/5522997747785">+55 (22) 99774-7785</a></p>
             <p>Ou envie um email para: <a href="mailto:pedrolucasp@gmail.com">pedrolucasp@gmail.com</a></p>
+            <p>Siga-nos no Instagram: <a href="https://www.instagram.com/projetocasaplastica" target="_blank">@projetocasaplastica</a></p>
         </section>
     </main>
 
