--- a/index.html
+++ b/index.html
@@ -22,7 +22,9 @@
     </nav>
 
     <main>
-        <img src="/Asset 93.png" />
+        <section>
+            <img src="/Asset 93.png" />
+        </section>
     </main>
 
     <footer>
