--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 
     <main>
         <section>
-            <img src="/Asset 93.png" />
+            <img src="/Asset 93.png" class="logo"/>
         </section>
     </main>
 
