--- a/sobre.html
+++ b/sobre.html
@@ -24,8 +24,7 @@
     <main>
         <section>
             <h2>Sobre Nós</h2>
-            <p>A Casa Plastica é uma iniciativa dedicada à conscientização e desenvolvimento de tecnologias para reciclagem de plásticos. Fundada por Pedro Lucas, a empresa busca promover a sustentabilidade e a preservação do meio ambiente.</p>
-            <p>Pedro Lucas é um entusiasta da sustentabilidade e fundador do Projeto Casa Plastica. Com formação em Design Gráfico, Mecânica Técnica e Mandarim for Business, ele tem experiência em gestão de equipes e projetos de produtos digitais.</p>
+            <p>A Casa Plastica é uma iniciativa dedicada à conscientização e desenvolvimento de tecnologias para reciclagem de plásticos. Buscamos promover a sustentabilidade e a preservação do meio ambiente com novas tecnologias e com um olhar prático e acessível.</p>
         </section>
     </main>
 
