--- a/sobre.html
+++ b/sobre.html
@@ -22,9 +22,10 @@
     </nav>
 
     <main>
-        <section>
+       <section>
             <h2>Sobre Nós</h2>
-            <p>A Casa Plastica é uma iniciativa dedicada à conscientização e desenvolvimento de tecnologias para reciclagem de plásticos. Buscamos promover a sustentabilidade e a preservação do meio ambiente com novas tecnologias e com um olhar prático e acessível.</p>
+            <p>A Casa Plastica é uma iniciativa dedicada à conscientização e desenvolvimento de tecnologias para reciclagem de plásticos. Nossa missão é promover a sustentabilidade e a preservação do meio ambiente através da inovação e educação. Nosso projeto visa oferecer soluções práticas e acessíveis para o problema da poluição plástica, com foco em reciclagem descentralizada e educação ambiental.</p>
+            <p>Nosso principal produto, a Nomad, é uma máquina trituradora de plásticos portátil, parte de uma futura linha de mini máquinas focadas em reciclagem descentralizada. A Nomad não é apenas uma máquina de reciclagem, mas também uma ferramenta de aprendizado que ajuda a conscientizar sobre a importância da reciclagem e da sustentabilidade. Além disso, oferecemos serviços como palestras e apresentações sobre sustentabilidade e reciclagem de plásticos.</p>
         </section>
     </main>
 
