--- a/servicos.html
+++ b/servicos.html
@@ -26,8 +26,8 @@
             <h2>Nossos Serviços</h2>
             <p>Oferecemos os seguintes serviços:</p>
             <ul>
-                <li>Construção de máquinas de reciclagem de plástico sob demanda</li>
-                <li>Palestras e apresentações sobre sustentabilidade e reciclagem de plásticos</li>
+                <li>Construção de máquinas de reciclagem de plástico sob demanda: Desenvolvemos máquinas de reciclagem de plástico customizadas e trabalhamos no desenvolvimento da Nomad, que são projetadas para oferecer soluções práticas e acessíveis para o problema da poluição plástica.</li>
+                <li>Palestras e apresentações sobre sustentabilidade e reciclagem de plásticos: Promovemos a conscientização ambiental oferecendo palestras e apresentações sobre sustentabilidade, reciclagem de plásticos e o uso de tecnologias inovadoras para lidar com esses desafios.</li>
             </ul>
         </section>
     </main>
