--- a/index.html
+++ b/index.html
@@ -24,7 +24,8 @@
     <main>
         <section>
             <img src="/Asset 93.png" class="logo"/>
-            <p>Bem-vindo à Casa Plastica, sua parceira na luta contra a poluição plástica. Nós oferecemos soluções inovadoras e acessíveis para a reciclagem de plásticos, promovendo a sustentabilidade e a preservação do meio ambiente. Explore nosso site para saber mais sobre nossos serviços, produtos e iniciativas.</p>
+            <h2>Bem-vindo à Casa Plastica</h2>
+            <p>Desafie a poluição plástica conosco. Nós oferecemos soluções inovadoras e acessíveis para a reciclagem de plásticos, promovendo a sustentabilidade e a preservação do meio ambiente. Explore nosso site para saber mais sobre nossos serviços, produtos e iniciativas.</p>
         </section>
     </main>
 
