--- a/sobre.html
+++ b/sobre.html
@@ -10,7 +10,7 @@
 
 <body>
     <header>
-        <a href="/"><h1>Casa Plastica</h1></a>
+        <a href="/"><img src="/logo.png" alt="Casa Plastica" class="logo"></a>
     </header>
 
     <nav>
