--- a/servicos.html
+++ b/servicos.html
@@ -9,8 +9,8 @@
 </head>
 
 <body>
-    <header>
-        <a href="/"><h1>Casa Plastica</h1></a>
+   <header>
+        <a href="/"><img src="/logo.png" alt="Casa Plastica" class="logo"></a>
     </header>
 
     <nav>
