--- a/servicos.html
+++ b/servicos.html
@@ -34,7 +34,7 @@
     </main>
 
     <footer>
-        <p>&copy; 2024 Projet Casa Plastica. </br> Todos os direitos reservados.</p>
+        <p>&copy; 2024 Projeto Casa Plastica. </br> Todos os direitos reservados.</p>
     </footer>
 </body>
 
