--- a/index.html
+++ b/index.html
@@ -24,7 +24,9 @@
     <main>
         <section>
             <h2>Bem-vindo à Casa Plastica</h2>
-            <p>Desafie a poluição plástica conosco. Nós oferecemos soluções inovadoras e acessíveis para a reciclagem de plásticos, promovendo a sustentabilidade e a preservação do meio ambiente. Explore nosso site para saber mais sobre nossos serviços, produtos e iniciativas.</p>
+            <p>Desafie a poluição plástica conosco.</p>
+            <p>Nós oferecemos soluções inovadoras e acessíveis para a reciclagem de plásticos, promovendo a sustentabilidade e a preservação do meio ambiente.</p>
+            <p>Explore nosso site para saber mais sobre nossos serviços, produtos e iniciativas.</p>
         </section>
     </main>
 
