--- a/sobre.html
+++ b/sobre.html
@@ -25,9 +25,11 @@
     <main>
         <section>
             <h2>Sobre Nós</h2>
-            <p>Somos a Casa Plastica, uma empresa empenhada em combater a poluição plástica e promover a sustentabilidade. Nosso projeto surgiu com a ideia de construir uma casa feita de plásticos retirados dos oceanos, mas evoluímos para muito mais.</p>
+            <p>Somos a Casa Plastica, uma empresa empenhada em combater a poluição plástica e promover a sustentabilidade.</p>
+            <p>Nosso projeto surgiu e segue com a ideia de construir uma casa feita inteiramente de plásticos retirados dos oceanos, mas evoluímos para muito mais.</p>
             <p>Atualmente, desenvolvemos tecnologias e soluções para reciclagem em pequena escala, trabalhando em parceria com outras empresas, oferecendo consultorias, workshops e palestras sobre sustentabilidade e reciclagem de plásticos.</p>
-            <p>Nossa linha de mini máquinas, incluindo a Nomad, visa tornar a reciclagem acessível a todos. Estamos comprometidos em tornar o mundo um lugar mais limpo e sustentável para as gerações futuras.</p>
+            <p>Nossa linha de máquinas e ferramentas visa tornar a reciclagem acessível a todos.</p>
+            <p>Estamos comprometidos em tornar o mundo um lugar mais limpo e sustentável para as gerações futuras.</p>
         </section>
     </main>
 
