--- a/sobre.html
+++ b/sobre.html
@@ -14,7 +14,7 @@
 
     <nav>
         <ul>
-            <li><a href="sobre.html">Sobre</a></li>
+            <li><a href="sobre.html"><u>Sobre</u></a></li>
             <li><a href="servicos.html">Serviços</a></li>
             <li><a href="contato.html">Contato</a></li>
         </ul>
@@ -27,8 +27,8 @@
             <h2>Sobre Nós</h2>
             <p>Somos a Casa Plastica, uma empresa empenhada em combater a poluição plástica e promover a sustentabilidade.</p>
             <p>Nosso projeto surgiu e segue com a ideia de construir uma casa feita inteiramente de plásticos retirados dos oceanos, mas evoluímos para muito mais.</p>
+            <p>Desenvolvemos uma linha de máquinas e ferramentas para a reciclagem ser acessível a todos.</p>
             <p>Atualmente, desenvolvemos tecnologias e soluções para reciclagem em pequena escala, trabalhando em parceria com outras empresas, oferecendo consultorias, workshops e palestras sobre sustentabilidade e reciclagem de plásticos.</p>
-            <p>Nossa linha de máquinas e ferramentas visa tornar a reciclagem acessível a todos.</p>
             <p>Estamos comprometidos em tornar o mundo um lugar mais limpo e sustentável para as gerações futuras.</p>
         </section>
     </main>
