--- a/servicos.html
+++ b/servicos.html
@@ -15,7 +15,7 @@
     <nav>
         <ul>
             <li><a href="sobre.html">Sobre</a></li>
-            <li><a href="servicos.html">Serviços</a></li>
+            <li><a href="servicos.html"><u>Serviços</u></a></li>
             <li><a href="contato.html">Contato</a></li>
         </ul>
     </nav>
