--- a/contato.html
+++ b/contato.html
@@ -16,7 +16,7 @@
         <ul>
             <li><a href="sobre.html">Sobre</a></li>
             <li><a href="servicos.html">Serviços</a></li>
-            <li><a href="contato.html">Contato</a></li>
+            <li><a href="contato.html"><u>Contato</u></a></li>
         </ul>
     </nav>
     </header>
@@ -36,9 +36,9 @@
                 <button type="submit">Enviar</button>
             </form>
             -->
-            <p>Entre em contato pelo WhatsApp: <a href="https://wa.me/5522997747785">+55 (22) 99774-7785</a></p>
-            <p>Ou envie um email para: <a href="mailto:pedrolucasp@gmail.com">pedrolucasp@gmail.com</a></p>
-            <p>Siga-nos no Instagram: <a href="https://www.instagram.com/projetocasaplastica" target="_blank">@projetocasaplastica</a></p>
+            <p>Entre em contato pelo <a href="https://wa.me/5522997747785">WhatsApp</a></p>
+            <p>Ou nos escreva um <a href="mailto:pedrolucasp@gmail.com">email</a></p>
+            <p>E siga-nos no Instagram: <a href="https://www.instagram.com/projetocasaplastica" target="_blank">@projetocasaplastica</a></p>
         </section>
     </main>
 
