--- a/index.html
+++ b/index.html
@@ -6,6 +6,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Casa Plastica</title>
     <link rel="stylesheet" href="styles.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Lobster&display=swap" rel="stylesheet">
 </head>
 
 <body>
@@ -23,7 +26,7 @@
 
     <main>
         <section>
-            <h2>Bem-vindo à Casa Plastica</h2>
+            <h2 class=˜lobster-regular">Bem-vindo à Casa Plastica</h2>
             <p>Desafie a poluição plástica conosco.</p>
             <p>Nós oferecemos soluções inovadoras e acessíveis para a reciclagem de plásticos, promovendo a sustentabilidade e a preservação do meio ambiente.</p>
             <p>Explore nosso site para saber mais sobre nossos serviços, produtos e iniciativas.</p>
