--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 
     <main>
         <section>
-            <h2 class="lobster-regular">Bem-vindo à Casa Plastica</h2>
+            <h2>Bem-vindo à Casa Plastica</h2>
             <p>Desafie a poluição plástica conosco.</p>
             <p>Nós oferecemos soluções inovadoras e acessíveis para a reciclagem de plásticos, promovendo a sustentabilidade e a preservação do meio ambiente.</p>
             <p>Explore nosso site para saber mais sobre nossos serviços, produtos e iniciativas.</p>
