--- a/index.html
+++ b/index.html
@@ -10,28 +10,25 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Lobster&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="styles.css">
+    <script src="content.js" defer></script>
     
 </head>
 
 <body>
     <header>
-        <a href="/"><img src="/logo.png" alt="Casa Plastica" class="logo"></a>
-
-    <nav>
-        <ul>
-            <li><a href="sobre.html">Sobre</a></li>
-            <li><a href="servicos.html">Serviços</a></li>
-            <li><a href="contato.html">Contato</a></li>
-        </ul>
-    </nav>
+        <nav>
+            <a href="#" data-page="home"><img src="/logo.png" alt="Casa Plastica" class="logo"></a>
+            <ul>
+                <!-- <li><a href="#" data-page="home">Home</a></li> -->
+                <li><a href="#" data-page="sobre">Sobre</a></li>
+                <li><a href="#" data-page="servicos">Serviços</a></li>
+                <li><a href="#" data-page="contato">Contato</a></li>
+            </ul>
+        </nav>
     </header>
 
     <main>
-        <section>
-            <h2>Bem-vindo à Casa Plastica</h2>
-            <p>Desafie a poluição plástica conosco.</p>
-            <p>Nós oferecemos soluções inovadoras e acessíveis para a reciclagem de plásticos, promovendo a sustentabilidade e a preservação do meio ambiente.</p>
-            <p>Explore nosso site para saber mais sobre nossos serviços, produtos e iniciativas.</p>
+        <section id="content">
         </section>
     </main>
 
