--- a/index.html
+++ b/index.html
@@ -6,34 +6,25 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Casa Plastica</title>
     <link rel="icon" type="image/x-icon" href="favicon.ico">
+    
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Lobster&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="styles.css">
-    <script src="content.js" defer></script>
     
+    <script src="header.js" defer></script>
+    <script src="footer.js" defer></script>
+    <script src="main.js" defer></script>
 </head>
 
 <body>
-    <header>
-        <nav>
-            <a href="#" data-page="home"><img src="/logo.png" alt="Casa Plastica" class="logo"></a>
-            <ul>
-                <!-- <li><a href="#" data-page="home">Home</a></li> -->
-                <li><a href="#" data-page="sobre">Sobre</a></li>
-                <li><a href="#" data-page="servicos">Serviços</a></li>
-                <li><a href="#" data-page="contato">Contato</a></li>
-            </ul>
-        </nav>
+    <header id="header">
     </header>
 
-    <main>
-        <section id="content">
-        </section>
+    <main id="main">
     </main>
 
-    <footer>
-        <p>&copy; 2024 Projeto Casa Plastica. </br> Todos os direitos reservados.</p>
+    <footer id="footer">
     </footer>
 </body>
 
