--- a/index.html
+++ b/index.html
@@ -5,7 +5,6 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Casa Plastica is dedicated to fighting plastic pollution and promoting sustainability through innovative recycling solutions. Explore our services and initiatives.">
-
     <title>Casa Plastica</title>
     <link rel="icon" type="image/x-icon" href="favicon.ico">
     
@@ -19,17 +18,15 @@
     <script src="header.js" defer></script>
     <script src="footer.js" defer></script>
     <script src="main.js" defer></script>
+    <script src="map.js" defer></script>
 </head>
 
 <body>
-    <header id="header">
-    </header>
+    <header id="header"></header>
 
-    <main id="main">
-    </main>
+    <main id="main"></main>
 
-    <footer id="footer">
-    </footer>
+    <footer id="footer"></footer>
 </body>
 
 </html>
